# HackersProject

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  TODO.txt
CMake/: data_files.cmake  functions.cmake  options.cmake  proto.cmake
Data/: CMakeLists.txt
Data/pb/: programs.pb
Data/proto/: cpu.proto  cyberentities.proto  cybermatrix.proto  deck.proto  memory.proto  program.proto  psu.proto  technology.proto
Data/xml/: programs.xml
Sources/: CMakeLists.txt
Sources/DataGenerator/: CMakeLists.txt
Sources/DataGenerator/src/: CMakeLists.txt  main.cpp
Sources/DataGenerator/src/generators/: program_generator.cpp  program_generator.h
Sources/DataGenerator/src/interface/: abstract_generator.h
Sources/DataGenerator/src/proto_obj/: cpu.pb.cc  deck.pb.h  memory.pb.cc  program.pb.cc  program.pb.h  technology.pb.cc  technology.pb.h
Sources/DataGenerator/test/: CMakeLists.txt
Sources/DataGenerator/test/testcases/: ut_program_generator.cpp
Sources/Main/: CMakeLists.txt  TODO.txt  main.cpp  proto.cmake
Sources/Main/Data/: programs.xml
Sources/Main/GameLogic/Deck/: Deck.h
Sources/Main/GameLogic/Factories/: deck_factory.cpp  program_factory.cpp  program_factory.h  program_warehouse.cpp  program_warehouse.h
Sources/Main/GameLogic/Interface/: abstract_cpu.h  abstract_deck.h  abstract_program.h  program_effects.cpp  program_effects.h  types.h
Sources/Main/GameLogic/Programs/: analyze_program.h  attack_program.h  crypt_program.h  deceive_program.h  decoy_program.h  decrypt_program.h  detect_program.h  evaluate_program.h  medic_program.h  program.cpp  program.h  relocate_program.h  scan_program.h  shield_program.h  slow_program.h  virus_program.h  weaken_program.h
Sources/Main/GameLogic/proto/: cyberentities.pb.h  cybermatrix.pb.cc  cybermatrix.pb.h  deck.pb.cc  deck.pb.h  memory.pb.h  program.pb.cc  program.pb.h
Sources/Main/Tools/: path_manager.h
Sources/Main/proto/: deck.proto  program.proto
Sources/Main/src/: CMakeLists.txt  TODO.txt  main.cpp
Sources/Main/src/GameLogic/: battle_manager.cpp  battle_manager.h
Sources/Main/src/GameLogic/Deck/: Deck.h
Sources/Main/src/GameLogic/Factories/: deck_factory.h
Sources/Main/src/GameLogic/Interface/: abstract_program.h  types.h
Sources/Main/src/GameLogic/Programs/: program.h
Sources/Main/src/GameLogic/proto/: cpu.pb.h  cyberentities.pb.cc  cybermatrix.pb.cc  deck.pb.cc  psu.pb.cc  psu.pb.h
Sources/Main/src/Tools/: path_manager.h
Sources/Main/src/gui/: initialize.cpp  texture_manager.h
Sources/Main/test/: CMakeLists.txt
Sources/Main/test/TestCases/: deck_test.h
Sources/Main/test/TestCases/Factories/: program_warehouse_test.cpp
Sources/Main/test/TestCases/Programs/: ut_program_test.cpp
Sources/SDL2/: CMakeLists.txt
Sources/Tools/: CMakeLists.txt  loggers.cpp  qtTools.cpp  xml_tools.cpp
Sources/UnitTest/: CMakeLists.txt
Sources/UnitTest/TestCases/: RunProgressTest.cpp  RunProgressTest.h
Sources/UnitTest/TestCases/Factories/: program_factory_test.cpp  program_warehouse_test.cpp
Sources/UnitTest/TestCases/Programs/: ut_program_test.cpp
Sources/log4cpp/: CMakeLists.txt
Sources/log4cpp/src/: BufferingAppender.cpp
Sources/protobuf/: CMakeLists.txt
Sources/pugixml/: CMakeLists.txt
docs/: CMakeLists.txt  HackersProject.eap  HackersProject.ldb
include/: CMakeLists.txt
include/Tools/: loggers.h  qtTools.h  xml_tools.h
